--- a/paper/main.tex
+++ b/paper/main.tex
@@ -13,10 +13,37 @@
 
 \section{Geometry from a Time Series}
 
-\section{Reconstruction of dynamical systems from inter-spike intervals}
+\subsection{Summary}
+
+The idea of \cite{paper1} is to give some insight in turbulent or chaotic systems. To do so, they enfatice that the usual data in this experiments is some observable of the system sampled at regular times. 
+
+First, they show the fact that one can reconstruct the topology of such a systems just with one coordinate of any dynamical system. Really, what they show is that one can reconstruct the topology of the system using any combination of $D$ independent variables of the systems, where $d$ is the dimension of the system. They show that this procedure works for the Rossler attractor.
+
+Then, they show that for a systems with only one positive-characteristic exponent(Liapunov exponent in modern terms), one can extract it just using the description defined above ergo one only needs one coordinate to find the exponent. They compute these exponents with different descriptions for the Rossler attractor. and show how well the results fit with the exponent extracted from the 3-coordinate one.
+
+Finally, they state that one can obtain the dimensionality of an attractor from using the description used above. To do so they give a 'general' procedure in which one graphs the conditional probability of a coordinate being a certain value knowing $k$ previous values. Then, they state that the $k$ for which the graph displays a kind of delta, or a peak as sharp as possible, is the dimension of the attractor. They use that to extract that the dimension of the Rossler attractor is two.
+
+\subsection{Review}
+
+We first find this paper really interesting and in fact we still do. Despite, we have some major objections to it, to start with they don't really \textit{prove} anything they just show that they've found it works that way and they give some examples to support it's hypothesis. Being more precise, they don't show why the topology of the phase space is conserved using their logic so it can all be wrong. In fact, Takens theorems \cite{takens} proves what they conjecture but arguing why the fit is not the dimension of the dynamical system but two times. Moreover, the procedure they give to compute the dimension of the attractor it's latter proved to be effective only in really \textit{flat} strange attractors and for the Rossler case it isn't exactly two.
+
+So our final review would sum up that they found some really important intuition about dynamical systems given some \textit{time series} of it but they had much work to do yet. We have to remember that the paper is from 1979 and at that time the knowledge of strange attractors was really short.
+
+\section{Reconstruction of dynamical systems from inter-spike intervals summary}
 
 \section{Results}
 
 \section{Conclusions}
+
+\begin{thebibliography}{99}
+ 
+\bibitem{prove}N. H. Packard, J. P. Crutchfield, J. D. Farmer, and R. S. Shaw, {\it Geometry from a Time Series}, Dynamical Systems Collective, Physics DePartment, University of California, Santa Crae, California (13 November 1979).
+
+\bibitem{interspike}Tim Sauer, {\it Reconstruction of Dynamical Systems from Interspike Intervals}, Department of Mathematical Sciences, Geode Mason University, Fairfas, Vinpnia (Received 15 February 1994).
+
+\bibitem{takens}F. Tskens, {\it Dynamical Systems and Turbulence}, Lecture Notes in Math-
+ematics Vol. 898 (Springer-Verlsg, Berlin, 1981).
+
+\end{thebibliography}
 
 \end{document}
