--- a/paper/main.tex
+++ b/paper/main.tex
@@ -29,7 +29,21 @@ We first find this paper really interesting and in fact we still do. Despite, we
 
 So our final review would sum up that they found some really important intuition about dynamical systems given some \textit{time series} of it but they had much work to do yet. We have to remember that the paper is from 1979 and at that time the knowledge of strange attractors was really short.
 
-\section{Reconstruction of dynamical systems from inter-spike intervals summary}
+\section{Reconstruction of Dynamical Systems from Interspike Intervals}
+
+\subsection{summary}
+The paper \cite{interspike} tries to pose the following question: being a point process a the manifestation of an an underlying deterministic system, it is possible to identify the states of the system from the information provided in those sequence of points? The point process is simply a series of event timings. The main motivation of this question comes from examples found typically in biology, particularly in neurobiological systems, where amplitude measurements of an observable, such as neuronal currents, are not possible (nor desirable), but a series of pulses or spikes emmited at certain times are recorded. In the case of the neurons, for example, we normally have the firing times, emmited when the cell reaches a threshold potential, which triggers depolatization and then the cycle is restarted.\\
+On the other hand, they rely on the fact that states of finite dimensional dynamical systems correspond in a one-to-one manner with delay-coordinate vectors, which are vectors of time series measurements of a generic system observable. System analysis of this type is suggested in and an embedding theorem due to Takens established its validity. This has great consequencies and applications, because we can analyse topology and even geometry of the chaotic attractor. The applications can be noise filtering, prediction of chaotic time series.\\
+\textbf{Takens' theorem.} \cite{takens} It is a delay embedding theorem, i.e it gives the conditions under which a chaotic dynamical system can be reconstructed from a sequence of observations of the state of the system. The important point is that the reconstruction preserves the properties of the system that do not change under smooth coordinate changes. Nonetheless, it does not preserve the geometric shape of structures in phase space. The theorem basically states that the strange attractor can be embedded in $k-$ dimensional Euclidean space with $k>2d_A$, being $d_A$ the box counting dimension $d_A$.\\
+Thus the paper, relying the Takens' theorem, analyse the previous question for interspike interval (ISI) data, assuming a generic integrate-and-fire model coupling deterministic dynamical systems to a spike train, so that there is assumed that there is a one-to-one correspondence between the states of the system and the interspike interval vectors of sufficiently large dimension. \\
+Thus they create signals $S(x)$, being $x$ the trajectories provided by the dynamical system described by the Rossler and Lorentz attractors. Then the firing times $T_i$ are infered recursively by the equation
+\begin{equation}
+\int_{T_i}^{T_{i+1}} S(t)dt=\Theta
+\end{equation}
+And from this, the interspike intervals are defined as $t_i = T_i - T_{i-1}$. Those intervals can define the ISI vectors $(t_i,...,t_{i-m+1})$, m took in accordance to the Takens's theorem, so that it can be used to reconstruct the attractor $X$. Using different types of signal for the different analysis they perform, they reconstruct a Rossler attractor, but they later focus on the Lorentz dynamics. In order to determine that deterministically driven ISI series can be distinguished from stochastically driven ISI series, they perform a prediction algorithm in the interspike intervals obtained from the deterministic system and to some series of what is called surrogate data. They show that there is predictabihty not explained by any of the null hypotheses controlled for by the surrogate data. As the threshold $\Theta$ increases, predictability of the series decreases. They also analyse the effect of lengthening the prediction horizon, showing that there is several-step-ahead predictability in the original ISI series.
+
+\subsection{review}
+There are several points that seems to have a lack of purpose or explanation in the paper. They seem to take specific signals, aparently arbitrary, although they specify it is obviously needed positive signals in order to have spike events. They just reconstruct the Rossler attractor (they also write wrong the equations of this dynamical system), and give no explanation on why the Lorentz one its not observable from the spike interval time. They also fix the embedding dimension $m=3$, giving little explanation. So we had the feeling that most of the calculations and parameters are taken to confirm the results; although they claim at the beggining of the paper that their goal is to develop a model which is as generic as possible, their choices are not well justified, and there are some points that can not be fully understood by simply following the paper even the references. Nevertheless, it shows interesting results that seem to have important implications and we were able to reproduce its most important results with the parameters given by them.
 
 \section{Results}
 
