--- a/paper/main.tex
+++ b/paper/main.tex
@@ -112,12 +112,12 @@ We use the signal $S(t)=(x(t)+2)^2$ and different thresholds used in \cite{inter
 \label{fig:12series}
 \end{figure}
 
-We also show the comparison for the ISI lenght density distribution obtained on this cases for both series (original and surrogate)
+Finally 
 
 \begin{figure}[h!]
 \centering
-%\includegraphics[scale=0.5]{ISIdistribution} \includegraphics[scale=0.5]{GSdistribution}
-\caption{.}
+\includegraphics[scale=0.5]{prediction}
+\caption{Prediction horizon for ISI's created by the Lorentz attractor with $S(t)=(x+y+z)^2$ and $\Theta = 200$ (circles) and the same for Gaussian Shuffle (triangles). }
 \label{fig:distributions}
 \end{figure}
 
